--- a/src/Components/Loader/Loader.css
+++ b/src/Components/Loader/Loader.css
@@ -2,7 +2,7 @@
     height: 100%;
     width: 100%;
     background-color: black;
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     opacity: 0.4;
