Table label mapping and pagination text

--- a/src/Components/Pagination/Pagination.css
+++ b/src/Components/Pagination/Pagination.css
@@ -1,7 +1,13 @@
 .pagination-container {
-  display: flex;
-  justify-content: flex-end;
+	display: flex;
+	justify-content: space-between;
+}
+.pagination-text {
+	padding: 10px 10px;
+	color: grey;
+	font: 400 13.3333px Arial;
+	font-style: italic;
 }
 .pagination {
-  display: inline-block;
+	display: inline-block;
 }
