--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -1,30 +1,33 @@
 .table {
-  width: 100%;
-  margin-bottom: 1rem;
-  background-color: transparent;
+	width: 100%;
+	margin-bottom: 1rem;
+	background-color: transparent;
 }
 table {
-  border-collapse: collapse;
+	border-collapse: collapse;
 }
 .table thead th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #dee2e6;
-  text-transform: capitalize;
+	vertical-align: bottom;
+	border-bottom: 2px solid #dee2e6;
+	text-transform: capitalize;
 }
 .table td,
 .table th {
-  padding: 0.75rem;
-  vertical-align: top;
-  border-top: 1px solid #dee2e6;
-  width: 100px;
+	padding: 0.75rem;
+	vertical-align: top;
+	border-top: 1px solid #dee2e6;
+	width: 100px;
 }
 .table thead td:nth-of-type(1),
 .table tbody td:nth-of-type(1) {
-    width: 200px;
+	width: 200px;
 }
 th {
-  text-align: inherit;
+	text-align: inherit;
 }
 .table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.05);
+	background-color: rgba(0, 0, 0, 0.05);
+}
+.table-container {
+	min-height: 483px;
 }
