refactor and code beautification

--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -29,5 +29,6 @@ th {
 	background-color: rgba(0, 0, 0, 0.05);
 }
 .table-container {
-	min-height: 483px;
+	min-height: 78vh;
+    font: 400 14px Arial
 }
